[package]
name = "berkletree"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-poly-commit = "0.3.0"
ark-ec = "0.3.0"
ark-bls12-381 = "0.3.0"
ark-poly = "0.3.0"
ark-serialize = "0.3.0"
blake3 = "1.0"
serde = "1"
bitvec = "0.22.3"