[package]
name = "berkletree"
version = "0.0.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kzg = { version = "0.1.1", features = ['std'] }
blake3 = "1.0"
bls12_381 = "0.5.0"
serde = "1"
bitvec = "0.22.3"

[dev-dependencies]
fastrand = "1.5.0"